add loan transport and crdit logic